# decibel-hotindex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_PLAN.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  GRANT_PROPOSAL_DRAFT.md  README.md  SCHEMA.md
config/: example.local.yaml  example.mainnet.yaml  example.testnet.yaml
crates/decibel-admin/: Cargo.toml
crates/decibel-admin/src/: main.rs
crates/decibel-dataset/: Cargo.toml
crates/decibel-dataset/src/: main.rs
crates/decibel-hotindex-api/: Cargo.toml
crates/decibel-hotindex-api/src/: main.rs
crates/decibel-hotindex-bench/: Cargo.toml
crates/decibel-hotindex-bench/src/: main.rs
crates/decibel-hotindex-core/: Cargo.toml
crates/decibel-hotindex-core/src/: address.rs  config.rs  error.rs  lib.rs  time.rs  types.rs
crates/decibel-hotindex-ingest/: Cargo.toml
crates/decibel-hotindex-ingest/src/: decibel_parser.rs  lib.rs
crates/decibel-hotindex-storage/: Cargo.toml
crates/decibel-hotindex-storage/src/: engine.rs  key.rs  lib.rs  memory_engine.rs  rocksdb_engine.rs  tests.rs  toplingsdb_engine.rs
docs/: BENCHMARK_METHODOLOGY.md  DATASET_LAYOUT.md  MILESTONE_0_1_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_3_PLAN.md  MILESTONE_4_PLAN.md  MILESTONE_5_PLAN.md  PLAN_REVIEW.md  REAL_DATA_PREP.md  SERVER_RUNBOOK.md  SPIKES.md
scripts/: check-backend-isolation.sh  import-real-data.sh  record-mainnet-raw-resume.sh  run-benchmark-suite.sh
