[workspace]
resolver = "2"
members = [
    "crates/decibel-hotindex-core",
    "crates/decibel-hotindex-storage",
    "crates/decibel-dataset",
    "crates/decibel-admin",
    "crates/decibel-hotindex-ingest",
    "crates/decibel-hotindex-api",
    "crates/decibel-hotindex-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
