[workspace]
resolver = "2"
members = [
    "crates/decibel-hotindex-core",
    "crates/decibel-hotindex-storage",
    "crates/decibel-dataset",
    "crates/decibel-admin",
    "crates/decibel-hotindex-ingest",
    "crates/decibel-hotindex-api",
    "crates/decibel-hotindex-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"

[workspace.dependencies]
decibel-hotindex-core = { path = "crates/decibel-hotindex-core" }
decibel-hotindex-ingest = { path = "crates/decibel-hotindex-ingest" }
decibel-hotindex-storage = { path = "crates/decibel-hotindex-storage", default-features = false }
prost = "0.13.4"
rocksdb = { version = "0.22.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
    "transport",
    "prost",
    "codegen",
    "gzip",
] }
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
rocksdb = { git = "https://github.com/topling/rust-toplingdb", rev = "5390ceb77bebba1bf2720b052f83f82b864d64df" }
