[package]
name = "decibel-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { path = "../decibel-hotindex-core" }
decibel-hotindex-storage = { path = "../decibel-hotindex-storage", default-features = false }
serde_json = "1"

[features]
default = []
rocksdb = ["decibel-hotindex-storage/rocksdb"]
toplingsdb = ["rocksdb", "decibel-hotindex-storage/toplingsdb"]
