[package]
name = "decibel-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { workspace = true }
decibel-hotindex-storage = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
rocksdb = ["decibel-hotindex-storage/rocksdb"]
toplingsdb = ["rocksdb", "decibel-hotindex-storage/toplingsdb"]
