[package]
name = "decibel-dataset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { path = "../decibel-hotindex-core" }
decibel-hotindex-ingest = { path = "../decibel-hotindex-ingest" }
decibel-hotindex-storage = { path = "../decibel-hotindex-storage", default-features = false }
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "a9d20cdaea4b30ded5f1eeebc328bda983be8749" }
prost = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots", "tls-webpki-roots", "transport", "prost", "codegen", "gzip"] }
zstd = "0.13"

[features]
default = []
rocksdb = ["decibel-hotindex-storage/rocksdb"]
toplingsdb = ["rocksdb", "decibel-hotindex-storage/toplingsdb"]
