[package]
name = "decibel-dataset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { workspace = true }
decibel-hotindex-ingest = { workspace = true }
decibel-hotindex-storage = { workspace = true }
aptos-protos = { path = "/Users/ssyuan/work/project/aptos/protos/rust" }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
zstd = { workspace = true }

[features]
default = []
rocksdb = ["decibel-hotindex-storage/rocksdb"]
