[package]
name = "decibel-hotindex-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { workspace = true }
decibel-hotindex-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
rocksdb = ["decibel-hotindex-storage/rocksdb"]
