[package]
name = "decibel-hotindex-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
decibel-hotindex-core = { workspace = true }
rocksdb = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
rocksdb = ["dep:rocksdb"]
